# ETHGlobal-Taipei2025

.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 61ca8cc04764_setup.py  64846ebe3350_.py  8989345fab67_.py  d246db92768f_transactions.py
backend/scripts/: dev.sh  migrate.sh
backend/src/: config.py  main.py
backend/src/interfaces/: auth.py  curvegrid.py  thirdweb.py  transaction.py  user.py
backend/src/models/: base.py  transaction.py  user.py
backend/src/routes/: auth.py  curvegrid.py  thirdweb.py  user.py
backend/src/services/: auth.py  multibaas.py  transaction.py  user.py
backend/src/utils/: ens.py  ethereum.py  logger.py
contracts/ens/: L2Registrar.sol
contracts/payment/: PaymentContract.sol
front/: .env.example  .gitignore  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
front/src/: main.tsx  service-worker.ts  styles.css
front/src/apis/backend/: sdk.gen.ts  types.gen.ts
front/src/components/: About.tsx  AccountConnect.tsx  Dashboard.tsx  Layout.tsx  PaymentApp.tsx  Providers.tsx  RegisterUser.tsx  SendMoney.tsx  TransactionHistory.tsx
front/src/components/dashboard/: DashboardHeader.tsx  DashboardNavigation.tsx  HomeView.tsx  MobileHomeView.tsx  (+6 more)
front/src/config/: env.ts  polygon.ts  thirdweb.ts
front/src/hooks/: use-debounce.tsx
front/src/lib/: utils.ts
front/src/routes/: __root.tsx  index.tsx
front/src/stores/: account.ts
(+4 files in other folders)
