[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Reza Rahemtola <49811529+RezaRahemtola@users.noreply.github.com>"]
readme = "README.md"
package-mode = false
repository = "https://github.com/RezaRahemtola/ETHGlobal-Taipei2025"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.114.1" }
python-dotenv = "^1.0.1"
pyjwt = "^2.8.0"
web3 = "^7.10.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
